@startuml

title __TUTOR's Class Diagram__\n

  namespace com.jxust.tutor {
    class com.jxust.tutor.LoginMainActivity {
        - profileSelected : int
        - user : Cursor
        # onCreate()
    }
  }
  

  namespace com.jxust.tutor {
    class com.jxust.tutor.MainActivity {
        {static} + PREFS_NAME : String
        ~ sharedPreferences : SharedPreferences
        # onCreate()
    }
  }
  

  namespace com.jxust.tutor {
    class com.jxust.tutor.RegistrationActivity {
        - email : String
        - firstName : String
        - isValid : boolean
        - lastName : String
        - password : String
        - passwordConfirmation : String
        - profileSelected : int
        - rs : Cursor
        - schoolID : int
        - schoolList : ArrayList
        # onCreate()
    }
  }
  

  namespace com.jxust.tutor {
    class com.jxust.tutor.StudentMainActivity {
        {static} ~ USER_ID : int
        ~ bottomNav : BottomNavigationView
        # onCreate()
    }
  }
  

  namespace com.jxust.tutor {
    class com.jxust.tutor.TutorMainActivity {
        {static} ~ USER_ID : int
        ~ bottomNav : BottomNavigationView
        # onCreate()
    }
  }
  

  com.jxust.tutor.LoginMainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.jxust.tutor.LoginMainActivity o-- com.jxust.tutor.models.DBHelper : mydb
  com.jxust.tutor.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.jxust.tutor.RegistrationActivity -up-|> android.support.v7.app.AppCompatActivity
  com.jxust.tutor.RegistrationActivity o-- com.jxust.tutor.models.DBHelper : mydb
  com.jxust.tutor.StudentMainActivity -up-|> android.support.v4.app.FragmentActivity
  com.jxust.tutor.TutorMainActivity -up-|> android.support.v4.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
